--- a/19127009_19127416.ipynb
+++ b/19127009_19127416.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c32ef1ae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "7e96dd60",
    "metadata": {},
@@ -35,8 +43,6 @@
     "        - [Số dòng, số cột của tập dữ liệu](#Thu-thập-dữ-liệu)\n",
     "        - [Ý nghĩa từng cột](#Thu-thập-dữ-liệu)\n",
     "        - [Kiểu dữ liệu từng cột](#Thu-thập-dữ-liệu)\n",
-    "        - [Phân bố dữ liệu kiểu numerical](#Thu-thập-dữ-liệu)\n",
-    "        - [Phân bố dữ liệu kiểu categorical](#Thu-thập-dữ-liệu)\n",
     "    - [Nhận xét](#Thu-thập-dữ-liệu)\n",
     "        - [Có cột nào cần loại bỏ không?](#Thu-thập-dữ-liệu)\n",
     "        - [Có dòng dữ liệu nào cần loại bỏ không?](#Thu-thập-dữ-liệu)\n",
@@ -45,6 +51,8 @@
     "        - [Có dòng dữ liệu nào bị lặp không?](#Thu-thập-dữ-liệu)\n",
     "        - [Có dòng dữ liệu nào mang ý nghĩa khác không?](#Thu-thập-dữ-liệu)\n",
     "- #### [Khám phá dữ liệu (tiếp theo) - Đặt câu hỏi](#Thu-thập-dữ-liệu)\n",
+    "    - [Phân bố dữ liệu kiểu numerical](#Thu-thập-dữ-liệu)\n",
+    "        - [Phân bố dữ liệu kiểu categorical](#Thu-thập-dữ-liệu)\n",
     "\n"
    ]
   },
@@ -74,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4ce0039b",
    "metadata": {
     "scrolled": true
@@ -83,10 +91,10 @@
     {
      "data": {
       "text/plain": [
-       "'F:\\\\Anaconda\\\\python.exe'"
+       "'/Users/lanmac/opt/anaconda3/envs/min_ds-env/bin/python'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f0cb61f2",
    "metadata": {},
    "outputs": [],
@@ -136,40 +144,320 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d79f8e4f",
+   "id": "1e92dbad",
    "metadata": {},
    "source": [
     "---"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8d3a0ea0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "22d79f80",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "9e4670a0",
+   "id": "f1e7f054",
    "metadata": {},
    "source": [
-    "---"
+    "### Đọc dữ liệu từ file csv vào dataframe"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "01407739",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "      <th>hypertension</th>\n",
+       "      <th>heart_disease</th>\n",
+       "      <th>ever_married</th>\n",
+       "      <th>work_type</th>\n",
+       "      <th>Residence_type</th>\n",
+       "      <th>avg_glucose_level</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>smoking_status</th>\n",
+       "      <th>stroke</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>9046</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>Urban</td>\n",
+       "      <td>228.69</td>\n",
+       "      <td>36.6</td>\n",
+       "      <td>formerly smoked</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>51676</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Self-employed</td>\n",
+       "      <td>Rural</td>\n",
+       "      <td>202.21</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>never smoked</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>31112</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>Rural</td>\n",
+       "      <td>105.92</td>\n",
+       "      <td>32.5</td>\n",
+       "      <td>never smoked</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>60182</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>Urban</td>\n",
+       "      <td>171.23</td>\n",
+       "      <td>34.4</td>\n",
+       "      <td>smokes</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1665</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Self-employed</td>\n",
+       "      <td>Rural</td>\n",
+       "      <td>174.12</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>never smoked</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id  gender   age  hypertension  heart_disease ever_married  \\\n",
+       "0   9046    Male  67.0             0              1          Yes   \n",
+       "1  51676  Female  61.0             0              0          Yes   \n",
+       "2  31112    Male  80.0             0              1          Yes   \n",
+       "3  60182  Female  49.0             0              0          Yes   \n",
+       "4   1665  Female  79.0             1              0          Yes   \n",
+       "\n",
+       "       work_type Residence_type  avg_glucose_level   bmi   smoking_status  \\\n",
+       "0        Private          Urban             228.69  36.6  formerly smoked   \n",
+       "1  Self-employed          Rural             202.21   NaN     never smoked   \n",
+       "2        Private          Rural             105.92  32.5     never smoked   \n",
+       "3        Private          Urban             171.23  34.4           smokes   \n",
+       "4  Self-employed          Rural             174.12  24.0     never smoked   \n",
+       "\n",
+       "   stroke  \n",
+       "0       1  \n",
+       "1       1  \n",
+       "2       1  \n",
+       "3       1  \n",
+       "4       1  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hcs_df = pd.read_csv('data/healthcare-dataset-stroke-data.csv')\n",
+    "hcs_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56dce1f8",
+   "metadata": {},
+   "source": [
+    "### Dữ liệu gồm có bao nhiêu dòng và bao nhiêu cột?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3bff80f4",
+   "metadata": {
+    "deletable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "0a03dc9216c2e34b0151074d168e31a3",
+     "grade": false,
+     "grade_id": "cell-bc8810dbc4930a46",
+     "locked": false,
+     "schema_version": 3,
+     "solution": true,
+     "task": false
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5110, 12)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_rows = hcs_df.shape[0]\n",
+    "num_cols = hcs_df.shape[1]\n",
+    "\n",
+    "hcs_df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dda1b46e",
+   "metadata": {},
+   "source": [
+    "Dữ liệu có 12 cột và 5110 dòng."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84c33097",
+   "metadata": {},
+   "source": [
+    "### Mỗi cột có ý nghĩa gì?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc73d015",
+   "metadata": {},
+   "source": [
+    "Dưới đây là phần mô tả của Dataset về các cột trong file \"healthcare-dataset-stroke-data.csv\":\n",
+    "- **id**: unique identifier\n",
+    "- **gender**: \"Male\", \"Female\" or \"Other\"\n",
+    "- **age**: age of the patient\n",
+    "- **hypertension**: 0 if the patient doesn't have hypertension, 1 if the patient has hypertension\n",
+    "- **heart_disease**: 0 if the patient doesn't have any heart diseases, 1 if the patient has a heart disease\n",
+    "- **ever_married**: \"No\" or \"Yes\"\n",
+    "- **work_type**: \"children\", \"Govt_jov\", \"Never_worked\", \"Private\" or \"Self-employed\"\n",
+    "- **Residence_type**: \"Rural\" or \"Urban\"\n",
+    "- **avg_glucose_level**: average glucose level in blood\n",
+    "- **bmi**: body mass index\n",
+    "- **smoking_status**: \"formerly smoked\", \"never smoked\", \"smokes\" or \"Unknown\"\n",
+    "- **stroke**: 1 if the patient had a stroke or 0 if not"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "569b223f",
+   "metadata": {},
+   "source": [
+    "### Mỗi cột hiện đang có kiểu dữ liệu gì?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "58466944",
+   "metadata": {
+    "deletable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "96e1fdd8f9e7fa97311e690dcdea495b",
+     "grade": false,
+     "grade_id": "cell-e7c33d274bed2b0c",
+     "locked": false,
+     "schema_version": 3,
+     "solution": true,
+     "task": false
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                     int64\n",
+       "gender                object\n",
+       "age                  float64\n",
+       "hypertension           int64\n",
+       "heart_disease          int64\n",
+       "ever_married          object\n",
+       "work_type             object\n",
+       "Residence_type        object\n",
+       "avg_glucose_level    float64\n",
+       "bmi                  float64\n",
+       "smoking_status        object\n",
+       "stroke                 int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hcs_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0466c13",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
