Update thong tin ca nhan

--- a/19127009_19127416.ipynb
+++ b/19127009_19127416.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c32ef1ae",
+   "id": "98614285",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -52,7 +52,7 @@
     "        - [Có dòng dữ liệu nào mang ý nghĩa khác không?](#Thu-thập-dữ-liệu)\n",
     "- #### [Khám phá dữ liệu (tiếp theo) - Đặt câu hỏi](#Thu-thập-dữ-liệu)\n",
     "    - [Phân bố dữ liệu kiểu numerical](#Thu-thập-dữ-liệu)\n",
-    "        - [Phân bố dữ liệu kiểu categorical](#Thu-thập-dữ-liệu)\n",
+    "    - [Phân bố dữ liệu kiểu categorical](#Thu-thập-dữ-liệu)\n",
     "\n"
    ]
   },
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e92dbad",
+   "id": "c12be011",
    "metadata": {},
    "source": [
     "---"
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1e7f054",
+   "id": "e23af5e3",
    "metadata": {},
    "source": [
     "### Đọc dữ liệu từ file csv vào dataframe"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "01407739",
+   "id": "b8571b8b",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56dce1f8",
+   "id": "1b35f2a3",
    "metadata": {},
    "source": [
     "### Dữ liệu gồm có bao nhiêu dòng và bao nhiêu cột?"
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3bff80f4",
+   "id": "2bf093ed",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dda1b46e",
+   "id": "08e1968c",
    "metadata": {},
    "source": [
     "Dữ liệu có 12 cột và 5110 dòng."
@@ -366,35 +366,67 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84c33097",
+   "id": "0da578e9",
    "metadata": {},
    "source": [
     "### Mỗi cột có ý nghĩa gì?"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "fc73d015",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "d4739fb9",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1) id:                 unique identifier\n",
+      "2) gender:             \"Male\", \"Female\" or \"Other\"\n",
+      "3) age:                age of the patient\n",
+      "4) hypertension:       0 if the patient doesn't have hypertension, 1 if the patient has hypertension\n",
+      "5) heart_disease:      0 if the patient doesn't have any heart diseases, 1 if the patient has a heart disease\n",
+      "6) ever_married:       \"No\" or \"Yes\"\n",
+      "7) work_type:          \"children\", \"Govt_jov\", \"Never_worked\", \"Private\" or \"Self-employed\"\n",
+      "8) Residence_type:     \"Rural\" or \"Urban\"\n",
+      "9) avg_glucose_level:  average glucose level in blood\n",
+      "10) bmi:               body mass index\n",
+      "11) smoking_status:    \"formerly smoked\", \"never smoked\", \"smokes\" or \"Unknown\"*\n",
+      "12) stroke.            1 if the patient had a stroke or 0 if not\n",
+      "*Note: \"Unknown\" in smoking_status means that the information is unavailable for this patient\n"
+     ]
+    }
+   ],
    "source": [
-    "Dưới đây là phần mô tả của Dataset về các cột trong file \"healthcare-dataset-stroke-data.csv\":\n",
-    "- **id**: unique identifier\n",
-    "- **gender**: \"Male\", \"Female\" or \"Other\"\n",
-    "- **age**: age of the patient\n",
-    "- **hypertension**: 0 if the patient doesn't have hypertension, 1 if the patient has hypertension\n",
-    "- **heart_disease**: 0 if the patient doesn't have any heart diseases, 1 if the patient has a heart disease\n",
-    "- **ever_married**: \"No\" or \"Yes\"\n",
-    "- **work_type**: \"children\", \"Govt_jov\", \"Never_worked\", \"Private\" or \"Self-employed\"\n",
-    "- **Residence_type**: \"Rural\" or \"Urban\"\n",
-    "- **avg_glucose_level**: average glucose level in blood\n",
-    "- **bmi**: body mass index\n",
-    "- **smoking_status**: \"formerly smoked\", \"never smoked\", \"smokes\" or \"Unknown\"\n",
-    "- **stroke**: 1 if the patient had a stroke or 0 if not"
+    "with open('data/description.txt', 'r') as f:\n",
+    "    print(f.read())"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "569b223f",
+   "id": "d7dfbb52",
+   "metadata": {},
+   "source": [
+    "- **id**: mã id\n",
+    "- **gender**: giới tính (\"Male\", Female\" và \"Other\")\n",
+    "- **age**: tuổi tác\n",
+    "- **hypertension**: bị huyết áp cao (0 là không, 1 là có)\n",
+    "- **heart_disease**: bị bệnh tim (0 là không, 1 là có)\n",
+    "- **ever_married**: tình trạng kết hôn (\"No\" và \"Yes\")\n",
+    "- **work_type**: loại nghề nghiệp (\"children\", \"Govt_jov\", \"Never_worked\", \"Private\" và \"Self-employed\")\n",
+    "- **Residence_type**: loại cư dân (\"Rural\" hoặc \"Urban\")\n",
+    "- **avg_glucose_level**: lượng đường trung bình trong máu\n",
+    "- **bmi**: chỉ số khối cơ thể\n",
+    "- **smoking_status**: tình trạng hút thuốc (\"formerly smoked\", \"never smoked\", \"smokes\" và \"Unknown\")\n",
+    "- **stroke**: bị đột quỵ (0 là không, 1 là có)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c87606a3",
    "metadata": {},
    "source": [
     "### Mỗi cột hiện đang có kiểu dữ liệu gì?"
@@ -403,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "58466944",
+   "id": "bcb527bb",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -416,7 +448,7 @@
      "solution": true,
      "task": false
     },
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -447,9 +479,110 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "201da5de",
+   "metadata": {},
+   "source": [
+    "### Với mỗi cột có kiểu dữ liệu dạng numeric, các giá trị được phân bố như thế nào?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "908f70f6",
+   "metadata": {},
+   "source": [
+    "Hiện có 6 cột thuộc dạng numeric: \"age\", \"hypertension\", \"heart_disease\", \"avg_glucose_level\", \"bmi\", \"stroke\". Nhưng 3 cột \"hypertension\", \"heart_disease\", \"stroke\" do mã được đánh dưới dạng số nên 3 cột này sẽ là dạng categorical. Vì vậy, chỉ có 3 cột numeric là \"age\", \"avg_glucose_level\", \"bmi\". "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "1b54fffd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def missing_ratio(col):\n",
+    "    return col.isna().mean() * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "0a564b59",
+   "metadata": {
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "95f164d4ff7a5ee9869dbcc8e0c31d32",
+     "grade": false,
+     "grade_id": "cell-4c64c2ce1eea9f1d",
+     "locked": false,
+     "schema_version": 3,
+     "solution": true,
+     "task": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "num_col_profiles_df = hcs_df[[\"age\", \"avg_glucose_level\", \"bmi\"]]\n",
+    "num_col_profiles_df = num_col_profiles_df.agg([missing_ratio, pd.Series.min, pd.Series.max])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "888db875",
+   "metadata": {},
+   "source": [
+    "### Với mỗi cột có kiểu dữ liệu dạng categorical, các giá trị được phân bố như thế nào?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0fac7fe",
+   "metadata": {},
+   "source": [
+    "Ban đầu sẽ có 5 cột thuộc dạng categorical: \"gender\", \"ever_married\", \"work_type\", \"Residence_type\", \"smoking_status\".\n",
+    "Bởi vì lý do ở trên nên sẽ có thêm 3 cột: \"hypertension\", \"heart_disease\", \"stroke\". Vì vậy, tổng cộng có 8 cột thuộc dạng categorical: \"id\", \"gender\", \"hypertension\", \"heart_disease\",\"work_type\", \"Residence_type\", \"smoking_status\", \"stroke\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "682193ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def unique_non_null(s):\n",
+    "    return s.dropna().unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "18947752",
+   "metadata": {
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "95f164d4ff7a5ee9869dbcc8e0c31d32",
+     "grade": false,
+     "grade_id": "cell-4c64c2ce1eea9f1d",
+     "locked": false,
+     "schema_version": 3,
+     "solution": true,
+     "task": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "cate_col_profiles_df = hcs_df[[\"gender\", \"hypertension\", \"heart_disease\",\"work_type\", \n",
+    "                               \"Residence_type\", \"smoking_status\", \"stroke\"]]\n",
+    "cate_col_profiles_df = cate_col_profiles_df.agg([missing_ratio, unique_non_null, pd.Series.nunique])\n",
+    "cate_col_profiles_df = cate_col_profiles_df.rename(index={'unique_non_null': 'diff_vals', 'nunique': 'num_diff_vals'})"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0466c13",
+   "id": "a70c72dd",
    "metadata": {},
    "outputs": [],
    "source": []
