--- a/vỹ.ipynb
+++ b/vỹ.ipynb
@@ -3353,41 +3353,302 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b0067830-4281-4fdb-9be3-cee120883dc2",
+   "cell_type": "markdown",
+   "id": "0532e764-9195-47d7-9199-b3bb7714f282",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Nhận xét:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd0dbb13-7d7b-4af0-bf23-1d194dcc5ac2",
+   "metadata": {},
+   "source": [
+    "_____"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a1f7af7-e705-4737-9324-c8836aad674c",
+   "metadata": {},
+   "source": [
+    "#### Đối với những người có lối sống không lành mạnh (hút thuốc, ăn thức ăn nhiều dầu mỡ, uống nước ngọt) thì chắc chắn họ luôn có \n",
+    "#### khả năng bị đột quỵ. Tuy nhiên, ta tự hỏi: liệu có trường hợp nào sống lành mạnh mà vẫn có khả năng bị đột quỵ không? Và các \n",
+    "#### trường hợp này chiếm tỉ lệ là bao nhiêu?"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f3672a40-2396-4358-b2a3-2020b1b5f61b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f28da859-585c-4a27-9007-106b2e033ca9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "b069e6f7-d6c4-4eeb-8957-5f7943e93e99",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Số dòng</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>gender</th>\n",
+       "      <td>249</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>age</th>\n",
+       "      <td>249</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hypertension</th>\n",
+       "      <td>249</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>heart_disease</th>\n",
+       "      <td>249</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ever_married</th>\n",
+       "      <td>249</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>work_type</th>\n",
+       "      <td>249</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Residence_type</th>\n",
+       "      <td>249</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>avg_glucose_level</th>\n",
+       "      <td>249</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bmi</th>\n",
+       "      <td>209</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>smoking_status</th>\n",
+       "      <td>249</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>stroke</th>\n",
+       "      <td>249</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Số dòng\n",
+       "gender                 249\n",
+       "age                    249\n",
+       "hypertension           249\n",
+       "heart_disease          249\n",
+       "ever_married           249\n",
+       "work_type              249\n",
+       "Residence_type         249\n",
+       "avg_glucose_level      249\n",
+       "bmi                    209\n",
+       "smoking_status         249\n",
+       "stroke                 249"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stroke_active = hcs_df.loc[(hcs_df['stroke'] == 1)]\n",
+    "num_stroke_active = stroke_active.count(axis='rows')\n",
+    "pd.DataFrame(num_stroke_active, columns = ['Số dòng'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "34f8a33c-2c90-4464-bb45-0211c83911ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Số dòng</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>gender</th>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>age</th>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hypertension</th>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>heart_disease</th>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ever_married</th>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>work_type</th>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Residence_type</th>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>avg_glucose_level</th>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bmi</th>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>smoking_status</th>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>stroke</th>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Số dòng\n",
+       "gender                  35\n",
+       "age                     35\n",
+       "hypertension            35\n",
+       "heart_disease           35\n",
+       "ever_married            35\n",
+       "work_type               35\n",
+       "Residence_type          35\n",
+       "avg_glucose_level       35\n",
+       "bmi                     35\n",
+       "smoking_status          35\n",
+       "stroke                  35"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "healthy_but_stroke = stroke_active.loc[(stroke_active['avg_glucose_level'] < 140.0) & \n",
+    "                                       (stroke_active['bmi'] < 30.0) & \n",
+    "                                       (stroke_active['smoking_status'] == 'never smoked')]\n",
+    "num_healthy_but_stroke = healthy_but_stroke.count(axis='rows')\n",
+    "pd.DataFrame(num_healthy_but_stroke, columns = ['Số dòng'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "96a796a4-c962-4774-b474-913826b6ba24",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Kết quả</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>%</th>\n",
+       "      <td>14.1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Kết quả\n",
+       "%     14.1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "percent_healthy_but_stroke = (num_healthy_but_stroke[0] / num_stroke_active[0]) * 100\n",
+    "display(pd.DataFrame(data = [np.round(percent_healthy_but_stroke,1)],\n",
+    "                   index=['%'],\n",
+    "                   columns=['Kết quả']))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34f8a33c-2c90-4464-bb45-0211c83911ac",
+   "id": "68c54fd8-dd15-4e84-9242-ab9251d87f07",
    "metadata": {},
    "outputs": [],
    "source": []
