--- a/vỹ.ipynb
+++ b/vỹ.ipynb
@@ -3656,7 +3656,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
