--- a/19127009_19127416.ipynb
+++ b/19127009_19127416.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "98614285",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "7e96dd60",
    "metadata": {},
@@ -659,10 +651,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f297b84",
+   "id": "4e0fc96c",
    "metadata": {},
    "source": [
-    "- Để lấy thông tin người này có bị mắc bệnh không, ta xét 3 cột hypertension, heart_disease, stroke, nếu 1 trong 3 cột nếu có bị (tương đương số 1) thì ta cho người này có bệnh.\n",
+    "- Để lấy thông tin người này có bị mắc bệnh không, ta xét 3 cột hypertension, heart_disease, stroke, nếu 1 trong 3 cột nếu có bị (tương đương số 1) thì ta cho người này có bệnh (True).\n",
     "- Từ đó ta tạo thêm cột has_disease để lưu boolean (True, False) rằng người này có bệnh hay không"
    ]
   },
@@ -704,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "206df86e",
+   "id": "9ef2f5cb",
    "metadata": {},
    "source": [
     "- Ta group 2 cột smoking_status và has_disease vừa được tạo ở bước trên để tính phân bố dựa theo smoking_status\n",
@@ -714,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": 446,
-   "id": "7409af5e",
+   "id": "e917e13f",
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +783,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae55f6ab",
+   "id": "8e3f3ca5",
    "metadata": {},
    "source": [
     "Theo số liệu được tính toán như trên, ta thấy tỷ lệ mắc bệnh (hypertension hoặc heart disease hoặc stroke) của những người không hút thuốc (never smoked) thấp hơn so với những người đã từng (formerly smoked) hoặc đang hút thuốc (smokes). Ta còn thấy tỷ lệ không mắc bệnh của never smoked lại cao hơn 2 loại kia. Từ những điều trên cho thấy hành vi hút thuốc có tác động rất lớn đến sức khoẻ của con người và tỷ lệ mắc bệnh cao lên."
@@ -802,7 +794,7 @@
    "id": "10896af9",
    "metadata": {},
    "source": [
-    "### "
+    "### Con người càng già thì càng dễ bị mắc bệnh không?"
    ]
   },
   {
