--- a/19127009_19127416.ipynb
+++ b/19127009_19127416.ipynb
@@ -1120,6 +1120,37 @@
     "Theo như biểu đồ histogram ở trên cho thấy dường như có dấu hiệu tăng lên số người mắc bệnh theo tuổi tác, đặc biệt là ở tuổi trên dưới 80, số người mắc bệnh rất cao (cao nhất trong các số tuổi khác). Tỷ lệ mắc bệnh chủ yếu tập trung nhiều từ tuổi 50 đến khoảng 75.\n",
     "Điều này chứng tỏ rằng tuổi tác càng cao thì họ càng dễ bị mắc bệnh. Có thể giải thích rằng do tuổi càng cao, hệ miễn dịch hoạt động kém đi, dẫn đến các nguồn tế bào xấu lan truyền nhanh trong cơ thể và dễ bị mắc bệnh."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76f14176",
+   "metadata": {},
+   "source": [
+    "## Reflection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4958fc69",
+   "metadata": {},
+   "source": [
+    "- Each member: What difficulties have you encountered?\n",
+    "- Each member: What have you learned?\n",
+    "- Your group: If you had more time, what would you do?\n",
+    "\n",
+    "19127009 - Lữ Thế Vỹ\n",
+    "- Khó khăn: \n",
+    "- Bài học: \n",
+    "\n",
+    "19127416 - Mạc Văn Hưng\n",
+    "- Khó khăn: Chưa tìm được thêm câu hỏi hay.\n",
+    "- Bài học: biết thêm về trực quan hoá, phân tích dữ liệu, cải thiện khả năng team-work.\n",
+    "\n",
+    "Nếu nhóm có thêm thời gian:\n",
+    "- Tìm thêm nhiều câu hỏi hay và ý nghĩa, nâng cao chất lượng của câu hỏi.\n",
+    "- Phân tích dữ liệu sâu hơn \n",
+    "- "
+   ]
   }
  ],
  "metadata": {
