--- a/19127009_19127416.ipynb
+++ b/19127009_19127416.ipynb
@@ -369,9 +369,7 @@
    "cell_type": "code",
    "execution_count": 33,
    "id": "d4739fb9",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -440,8 +438,7 @@
      "schema_version": 3,
      "solution": true,
      "task": false
-    },
-    "scrolled": false
+    }
    },
    "outputs": [
     {
@@ -707,9 +704,7 @@
    "cell_type": "code",
    "execution_count": 512,
    "id": "a1ad2cb3",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -901,9 +896,7 @@
    "cell_type": "code",
    "execution_count": 493,
    "id": "e613d1c8",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1138,24 +1131,31 @@
     "- Each member: What have you learned?\n",
     "- Your group: If you had more time, what would you do?\n",
     "\n",
-    "19127009 - Lữ Thế Vỹ\n",
-    "- Khó khăn: \n",
-    "- Bài học: \n",
+    "#### 19127009 - Lữ Thế Vỹ\n",
+    "- Khó khăn: Do thời gian gấp rút (trùng thời gian thi, bị rút ngắn deadline) nên công việc bị dồn nhiều. Các câu hỏi khi được đặt ra cũng chưa được suy nghĩ chín chắn, chưa thật sự sâu sắc, ý nghĩa. Bộ dữ liệu này chưa thật sự đầy đủ để có thể áp dụng hết kiến thức đã học từ môn học . Nếu có nhiều thời gian hơn thì chắc chắn bài làm sẽ tốt hơn\n",
+    "- Bài học: Biết cách lập kế hoạch, sử dụng công cụ (Github, Trello, ...), khả năng xử lý vấn đề (bug, issues, ...). Các thư viện đồ hoạ Python, đọc file csv, cách tư duy đặt vấn đề câu hỏi dựa trên bộ dữ liệu\n",
     "\n",
-    "19127416 - Mạc Văn Hưng\n",
+    "#### 19127416 - Mạc Văn Hưng\n",
     "- Khó khăn: Chưa tìm được thêm câu hỏi hay.\n",
     "- Bài học: biết thêm về trực quan hoá, phân tích dữ liệu, cải thiện khả năng team-work.\n",
     "\n",
-    "Nếu nhóm có thêm thời gian:\n",
+    "#### Nếu nhóm có thêm thời gian:\n",
     "- Tìm thêm nhiều câu hỏi hay và ý nghĩa, nâng cao chất lượng của câu hỏi.\n",
-    "- Phân tích dữ liệu sâu hơn \n",
-    "- "
+    "- Phân tích dữ liệu sâu hơn, tìm ra các bộ dữ liệu lớn hơn đầy đủ hơn"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b41da26-055b-4627-a37c-7548a4606ee4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
